# chid

./: .gitignore  Makefile  README.md  pyproject.toml
chid/: __init__.py  __main__.py  profile.py  utils.py
